--- a/cups/config.yaml
+++ b/cups/config.yaml
@@ -1,5 +1,5 @@
 ---
-version: 1.1.3
+version: 1.1.0
 slug: cups
 name: CUPS Print Server
 description: CUPS print server with USB printer support (Ricoh, Dymo and more)
@@ -12,6 +12,13 @@ arch:
   - i386
 hassio_api: true
 host_network: true
+
+# Web UI in Home Assistant anzeigen
+ingress: true
+ingress_port: 631
+ingress_stream: true
+panel_icon: mdi:printer
+panel_title: CUPS Drucker
 
 # USB-Unterstützung für Drucker
 usb: true
