--- a/cups/config.yaml
+++ b/cups/config.yaml
@@ -1,5 +1,5 @@
 ---
-version: 1.2.5
+version: 1.4.0
 slug: cups
 name: CUPS Print Server
 description: CUPS print server with USB printer support (Ricoh, Dymo and more)
@@ -11,20 +11,18 @@ arch:
   - amd64
   - i386
 hassio_api: true
+
+# Host network for printer accessibility from local network
 host_network: true
 
-# Web UI in Home Assistant anzeigen
-ingress: true
-ingress_port: 631
-ingress_entry: /admin
-panel_icon: mdi:printer
-panel_title: CUPS Drucker
+# No internal ingress - use hass_ingress integration instead
+ingress: false
 
-# USB-Unterstützung für Drucker
+# USB support for printers
 usb: true
 full_access: true
 
-# Berechtigungen für USB-Geräte
+# Permissions for USB devices
 privileged:
   - SYS_RAWIO
 
@@ -35,7 +33,7 @@ init: false
 ports:
   631/tcp: 631
 ports_description:
-  631/tcp: CUPS web interface and printing port
+  631/tcp: CUPS web interface and IPP printing
 options:
   admin_username: "admin"
   admin_password: "admin"
