--- a/cups/config.yaml
+++ b/cups/config.yaml
@@ -1,5 +1,5 @@
 ---
-version: 1.4.0
+version: 1.5.0
 slug: cups
 name: CUPS Print Server
 description: CUPS print server with USB printer support (Ricoh, Dymo and more)
@@ -32,8 +32,10 @@ map:
 init: false
 ports:
   631/tcp: 631
+  8631/tcp: 8631
 ports_description:
-  631/tcp: CUPS web interface and IPP printing
+  631/tcp: CUPS direct access and IPP printing
+  8631/tcp: Web interface for hass_ingress (CSP headers removed)
 options:
   admin_username: "admin"
   admin_password: "admin"
