--- a/cups/rootfs/etc/nginx/http.d/cups-proxy.conf
+++ b/cups/rootfs/etc/nginx/http.d/cups-proxy.conf
@@ -15,11 +15,14 @@ server {
     location / {
         proxy_pass http://127.0.0.1:631;
         
-        # Pass through headers
-        proxy_set_header Host $http_host;
+        # HTTP Version
+        proxy_http_version 1.1;
+        
+        # WICHTIG: Host header auf localhost setzen für CUPS
+        proxy_set_header Host localhost;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Proto http;
         
         # WICHTIG: CSP und X-Frame-Options Header entfernen
         proxy_hide_header Content-Security-Policy;
