--- a/cups/rootfs/etc/nginx/http.d/cups-proxy.conf
+++ b/cups/rootfs/etc/nginx/http.d/cups-proxy.conf
@@ -24,9 +24,13 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto http;
         
-        # WICHTIG: CSP und X-Frame-Options Header entfernen
+        # CSP und X-Frame-Options von upstream verstecken
         proxy_hide_header Content-Security-Policy;
         proxy_hide_header X-Frame-Options;
+        
+        # WICHTIG: Eigene permissive Header setzen (überschreibt alles)
+        add_header X-Frame-Options "ALLOWALL" always;
+        add_header Content-Security-Policy "frame-ancestors *" always;
         
         # Timeouts
         proxy_connect_timeout 60s;
