Refactor Dockerfile to separate apk add commands
Split package installation into multiple RUN commands for clarity and maintainability.

--- a/cups/Dockerfile
+++ b/cups/Dockerfile
@@ -3,7 +3,15 @@ FROM ${BUILD_FROM}
 
 # CUPS Print Server with Avahi/mDNS support for Home Assistant (Alpine 3.23)
 
-RUN apk add --no-cache bash jq wget cups cups-filters cups-libs cups-client avahi avahi-libs avahi-tools dbus nginx gutenprint hplip usbutils libusb && mkdir -p /var/run/avahi-daemon /var/run/dbus /var/run/cups /etc/avahi/services /run/nginx /var/log/nginx /var/log/cups
+RUN apk add --no-cache bash jq wget cups 
+RUN apk add --no-cache cups-filters cups-libs cups-client 
+RUN apk add --no-cache avahi avahi-libs avahi-tools 
+RUN apk add --no-cache dbus nginx 
+RUN apk add --no-cache gutenprint 
+RUN apk add --no-cache hplip 
+RUN apk add --no-cache usbutils 
+RUN apk add --no-cache libusb 
+RUN mkdir -p /var/run/avahi-daemon /var/run/dbus /var/run/cups /etc/avahi/services /run/nginx /var/log/nginx /var/log/cups
 
 COPY rootfs/ /
 
