Optimize Dockerfile by consolidating package installs
Consolidate package installations into a single RUN command and enable the community repository for hplip and gutenprint.

--- a/cups/Dockerfile
+++ b/cups/Dockerfile
@@ -3,14 +3,13 @@ FROM ${BUILD_FROM}
 
 # CUPS Print Server with Avahi/mDNS support for Home Assistant (Alpine 3.23)
 
-RUN apk add --no-cache bash jq wget cups 
-RUN apk add --no-cache cups-filters cups-libs cups-client 
-RUN apk add --no-cache avahi avahi-libs avahi-tools 
-RUN apk add --no-cache dbus nginx 
-RUN apk add --no-cache gutenprint 
-RUN apk add --no-cache hplip 
-RUN apk add --no-cache usbutils 
-RUN apk add --no-cache libusb 
+# Enable community repository for hplip and gutenprint
+RUN echo "https://dl-cdn.alpinelinux.org/alpine/v3.23/community" >> /etc/apk/repositories
+
+# Install all packages in one layer
+RUN apk add --no-cache bash jq wget cups cups-filters cups-libs cups-client avahi avahi-libs avahi-tools dbus nginx gutenprint usbutils libusb && apk add --no-cache hplip || echo "WARN: hplip not available, skipping HP driver support"
+
+# Create required runtime directories
 RUN mkdir -p /var/run/avahi-daemon /var/run/dbus /var/run/cups /etc/avahi/services /run/nginx /var/log/nginx /var/log/cups
 
 COPY rootfs/ /
